# chatBobBE

./: .gitignore  README.md  main.py  pyproject.toml
app/agent/openai/: pdf_text_agent.py
app/controller/: chat_controller.py
app/dto/: chat_data_dto.py  chat_list_dto.py
app/manager/: chat_data_manager.py  chat_list_manager.py
app/service/: chat_service.py
app/service/chat/: chat_service.py
app/service/history/: chat_data_service.py  chat_history_service.py
app/utils/: chat_history_manager.py  resource_initializer.py
