[tool.poetry]
name = "chat_bob_be"
version = "0.1.0"
description = ""
authors = ["devBob <devbob0701@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.6"
openai = "^1.40.6"
langchain = "^0.2.13"
langchain-community = "^0.2.12"
pypdf = "^4.3.1"
chromadb = "^0.5.5"
tiktoken = "^0.7.0"
sentence-transformers = "^3.0.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
